--- a/index.html
+++ b/index.html
@@ -73,12 +73,14 @@
     <body>
         <div id="all-contents"> 
             <nav>
-                <header>Christine's Website</header>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="wargames.html">WarGames</a></li>
-                    </ul>
+                <header><a href="index.html">Christine's Website</a></header>
+            <ul>
+                <li><a href="index.html">Home</a>
+                </li>
+                <li><a href="portfolio.html">Portfolio</a>
+                <li><a href="wargames.html"><img border="0" alt="WarGames" src="https://i.imgur.com/muZsBol.png">
+                </a></li>
+            </ul>
             </nav>
             
             <main>
