--- a/portfolio.html
+++ b/portfolio.html
@@ -95,12 +95,13 @@
     <body>
       <div id="all-contents">
           <nav>
-            <header>Christine's Website</header>
+            <header><a href="index.html">Christine's Website</a></header>
             <ul>
                 <li><a href="index.html">Home</a>
                 </li>
                 <li><a href="portfolio.html">Portfolio</a>
-                <li></li><a href="wargames.html">WarGames</a></li>
+                <li><a href="wargames.html"><img border="0" alt="WarGames" src="https://i.imgur.com/muZsBol.png">
+                </a></li>
                 
             </ul>
           </nav>
