--- a/wargames.html
+++ b/wargames.html
@@ -101,7 +101,7 @@
                     <h2>Shall We Play a Game?</h2>
                     <h3><a href="https://www.myabandonware.com/game/global-thermonuclear-war-3u4/play-42k">Global Thermonuclear War</a></h3>
                     <h3><a href="https://www.chess.com/play/computer">Chess</a></h3>
-                    <h3><a href="https://www.youtube.com/embed/qNfjf2wzbok">Neverending</a></h3>
+                    <h3><a href="https://www.youtube.com/embed/qNfjf2wzbok" target="_blank">Neverending</a></h3>
                 </div>
             </main>
         </div>
