--- a/wargames.html
+++ b/wargames.html
@@ -103,9 +103,9 @@
                 <div class="content">
                     <h1>Greetings, Professor Falken</h1>
                     <h2>Shall We Play a Game?</h2>
-                    <h3><a href="https://www.myabandonware.com/game/global-thermonuclear-war-3u4/play-42k">Global Thermonuclear War</a></h3>
-                    <h3><a href="https://www.chess.com/play/computer">Chess</a></h3>
-                    <h3><a href="https://www.youtube.com/embed/qNfjf2wzbok" target="_blank">Neverending</a></h3>
+                    <h3><a href="https://www.myabandonware.com/game/global-thermonuclear-war-3u4/play-42k">Global Thermonuclear War <img border="0" alt="NuclearExplosion" src="https://i.imgur.com/ZhxXPzR.png"></a></h3>
+                    <h3><a href="https://www.chess.com/play/computer">Chess <img border="0" alt="Chess" src="https://i.imgur.com/0NFjtgn.png"></a></h3>
+                    <h3><a href="https://www.youtube.com/embed/qNfjf2wzbok" target="_blank">Neverending <img border="0" alt="Falcor" src="https://i.imgur.com/NuiN598.png"></a></h3>
                 </div>
             </main>
         </div>
