--- a/wargames.html
+++ b/wargames.html
@@ -103,8 +103,8 @@
                 <div class="content">
                     <h1>Greetings, Professor Falken</h1>
                     <h2>Shall We Play a Game?</h2>
-                    <h3><a href="https://www.myabandonware.com/game/global-thermonuclear-war-3u4/play-42k">Global Thermonuclear War <img border="0" alt="NuclearExplosion" src="images/nuclearblast.png"></a></h3>
-                    <h3><a href="https://www.chess.com/play/computer">Chess <img border="0" alt="Chess" src="images/chess.png"></a></h3>
+                    <h3><a href="https://www.myabandonware.com/game/global-thermonuclear-war-3u4/play-42k" target="_blank">Global Thermonuclear War <img border="0" alt="NuclearExplosion" src="images/nuclearblast.png"></a></h3>
+                    <h3><a href="https://www.chess.com/play/computer" target="_blank">Chess <img border="0" alt="Chess" src="images/chess.png"></a></h3>
                     <h3><a href="https://www.youtube.com/embed/qNfjf2wzbok" target="_blank">Neverending <img border="0" alt="Falcor" src="images/falcor.png"></a></h3>
                 </div>
             </main>
