--- a/portfolio1.html
+++ b/portfolio1.html
@@ -78,7 +78,7 @@
             <ul>
                 <li><a href="index.html">Home</a>
                 </li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="portfolio.html">Portfolio</a>
                 <li><a href="wargames.html"><img src="images/wargames.png" border="0" alt="WarGames">
                 </a></li>
             </ul>
