--- a/portfolio.html
+++ b/portfolio.html
@@ -113,9 +113,10 @@
             <div class="content">
                 <h1>Portfolio</h1>
                 <ul id="portfolio">
-                    <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
-                    <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
-                    <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
+                    <li><a href="projects/platformer/" target = "_blank">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
+                    <li><a href="projects/bouncing-box/" target = "_blank">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
+                    <li><a href="projects/circularity/" target = "_blank">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
+                    <li><a href="projects/runtime/" target = "_blank">Runtime : A Sidescrolling game featuring Halleb0t</a></li>
                 </ul>
             </div>
           </main>
