--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -17,7 +17,7 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: white;
+			background-color: rgb(255, 0, 0);
 			font-size: 300%;
 			text-align: center;
             color: white;
