--- a/projects/circularity/index.html
+++ b/projects/circularity/index.html
@@ -2,10 +2,20 @@
 
 <html>
     <head>
+        <style>
+            body {
+                background: url("backgroundpic_mrrogers.jpg") no-repeat center center fixed;;
+                background-color: #cccccc;
+                -webkit-background-size: cover;
+                -moz-background-size: cover;
+                -o-background-size: cover;
+                background-size: cover;
+            }
+        </style>
         <meta charset="utf-8">
 
         <title>Operation Spark || Motion Poem</title>
-        <body style="background-color:black;">
+       
         <meta name="description" content="Operation Spark Motion Poem">
         <meta name="author" content="operationspark.org">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +37,7 @@
             /*override default styles here*/
         </style>
     </head>
-    <body>
+    <body style= "background-image: url(backgroundpic_mrrogers.jpg);">
         <div>
             <canvas id="canvas" width="500" height="500"></canvas>
         </div>
