--- a/portfolio.html
+++ b/portfolio.html
@@ -117,6 +117,8 @@
                     <li><a href="projects/bouncing-box/" target = "_blank">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
                     <li><a href="projects/circularity/" target = "_blank">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
                     <li><a href="projects/runtime/" target = "_blank">Runtime : A Sidescrolling game featuring Halleb0t</a></li>
+                    <li><a href="ASD/box-walker/index.html" target = "_blank">Walker</a></li>
+                    <li><a href="ASD/pong/index.html" target = "_blank">Pong</a></li>
                 </ul>
             </div>
           </main>
