--- a/ASD/snake/index.html
+++ b/ASD/snake/index.html
@@ -15,7 +15,8 @@
     
     <div id='board'>
       <div id="apple"></div>
-      <div id="snake-head" class="snake"></div>      
+      <div id="snake-head" class="snake"></div>   
+      <button id = "playAgain" onClick="window.location.reload();"></button>   
     </div>
     <h1 id="score"></h1>
   </body>
