added snake to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -119,6 +119,7 @@
                     <li><a href="projects/runtime/" target = "_blank">Runtime : A Sidescrolling game featuring Halleb0t</a></li>
                     <li><a href="ASD/box-walker/index.html" target = "_blank">Walker</a></li>
                     <li><a href="ASD/pong/index.html" target = "_blank">Pong</a></li>
+                    <li><a href="ASD/snake/index.html" target = "_blank">Snake</a></li>
                 </ul>
             </div>
           </main>
