--- a/ASD/snake/index.html
+++ b/ASD/snake/index.html
@@ -15,10 +15,12 @@
     
     <div id='board'>
       <div id="apple"></div>
-      <div id="snake-head" class="snake"></div>   
-      <button id = "playAgain" onClick="window.location.reload();"></button>   
+      <div id="snake-head" class="snake"></div>  
+      <button id = "playAgain" onClick="window.location.reload();"></button>  
     </div>
     <h1 id="score"></h1>
+    </div>
+
   </body>
 
 </html>
