--- a/projects/scavenger-hunt.html
+++ b/projects/scavenger-hunt.html
@@ -104,7 +104,7 @@
   <div id="messageAbove">ACCESS CODE</div>
   <input type="text" id="inputBox" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
   <div id="errorMessage">
-    <img src="https://media.tenor.com/rSnbk9zDc3MAAAAj/m-you-didnt-say-the-magic-word.gif" alt="Try again" />
+    <img src="m-you-didnt-say-the-magic-word.gif" alt="Try again" />
     <div>Try again!</div>
     <div id="errorHint"></div>
   </div>
