--- a/projects/scavenger-hunt.html
+++ b/projects/scavenger-hunt.html
@@ -128,7 +128,7 @@
         <!-- Puzzle Inputs -->
         <div id="puzzleInputs" style="display: flex; flex-direction: column; align-items: center;">
           <div id="topRow" style="display: flex; justify-content: center; gap: 10px; margin-bottom: 20px;">
-            <!-- Top row: GRACE -->
+            <!-- Top row -->
             <script>
               for (let i = 1; i <= 5; i++) {
                 document.write(`
@@ -143,7 +143,7 @@
           </div>
 
           <div id="bottomRow" style="display: flex; justify-content: center; gap: 10px; margin-bottom: 20px;">
-            <!-- Bottom row: HOPPER -->
+            <!-- Bottom row-->
             <script>
               for (let i = 6; i <= 11; i++) {
                 document.write(`
